--- a/mia/Views/Favorite/Header/HXFavoriteHeader.xib
+++ b/mia/Views/Favorite/Header/HXFavoriteHeader.xib
@@ -9,15 +9,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXFavoriteHeader"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Kx-dS-kIN">
-                    <rect key="frame" x="12" y="9" width="171" height="32"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Kx-dS-kIN" userLabel="Shuffle Play View">
+                    <rect key="frame" x="12" y="14" width="171" height="32"/>
                     <subviews>
-                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qG6-Ko-smJ">
+                        <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="F-ShufflePlayIcon" translatesAutoresizingMaskIntoConstraints="NO" id="qG6-Ko-smJ">
                             <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="qG6-Ko-smJ" secondAttribute="height" multiplier="1:1" id="8zP-MB-D6L"/>
                                 <constraint firstAttribute="width" constant="32" id="rfS-EH-LYj"/>
@@ -29,14 +28,14 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Or-qm-gpt">
-                            <rect key="frame" x="134" y="0.0" width="9" height="32"/>
+                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0首" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Or-qm-gpt">
+                            <rect key="frame" x="134" y="0.0" width="23" height="32"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="首）" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4oN-Sg-0G5">
-                            <rect key="frame" x="143" y="0.0" width="28" height="32"/>
+                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="）" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4oN-Sg-0G5">
+                            <rect key="frame" x="157" y="0.0" width="14" height="32"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -63,12 +62,11 @@
                         <outletCollection property="gestureRecognizers" destination="6fv-rU-gog" appends="YES" id="F7k-m3-Hq4"/>
                     </connections>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HmY-wz-f8Q">
-                    <rect key="frame" x="244" y="9" width="64" height="32"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HmY-wz-f8Q" userLabel="Multiple Choice View">
+                    <rect key="frame" x="244" y="14" width="64" height="32"/>
                     <subviews>
-                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SSK-3e-v7w">
+                        <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="F-MultipleChoiceIcon" translatesAutoresizingMaskIntoConstraints="NO" id="SSK-3e-v7w">
                             <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="SSK-3e-v7w" secondAttribute="height" multiplier="1:1" id="7qz-3o-Nqb"/>
                                 <constraint firstAttribute="width" constant="32" id="QUH-90-Rnk"/>
@@ -98,27 +96,41 @@
                         <outletCollection property="gestureRecognizers" destination="xBp-jR-oUP" appends="YES" id="a2A-Wv-pij"/>
                     </connections>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VRt-Hn-DXe" userLabel="Bottom Line">
+                    <rect key="frame" x="50" y="60" width="270" height="0.0"/>
+                    <color key="backgroundColor" red="0.78431372549019607" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="0.5" id="47S-XW-Rtx"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="2Kx-dS-kIN" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="46p-kd-VqH"/>
                 <constraint firstAttribute="trailing" secondItem="HmY-wz-f8Q" secondAttribute="trailing" constant="12" id="EHJ-13-hU3"/>
                 <constraint firstItem="HmY-wz-f8Q" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="EWP-Je-JXZ"/>
+                <constraint firstAttribute="bottom" secondItem="VRt-Hn-DXe" secondAttribute="bottom" id="Sas-Dc-A5Y"/>
+                <constraint firstAttribute="trailing" secondItem="VRt-Hn-DXe" secondAttribute="trailing" id="f7L-LN-TdU"/>
+                <constraint firstItem="VRt-Hn-DXe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="i4k-9d-HU9"/>
                 <constraint firstItem="2Kx-dS-kIN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="12" id="iks-Yj-vAA"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="317" y="177"/>
         </view>
-        <tapGestureRecognizer id="6fv-rU-gog">
+        <tapGestureRecognizer id="6fv-rU-gog" userLabel="Shuffle Play Gesture">
             <connections>
                 <action selector="shufflePlayViewTaped" destination="-1" id="dgy-L5-FOz"/>
             </connections>
         </tapGestureRecognizer>
-        <tapGestureRecognizer id="xBp-jR-oUP">
+        <tapGestureRecognizer id="xBp-jR-oUP" userLabel="Multiple Choice Gesture">
             <connections>
                 <action selector="multipleSelectedViewTaped" destination="-1" id="eHR-cN-KfF"/>
             </connections>
         </tapGestureRecognizer>
     </objects>
+    <resources>
+        <image name="F-MultipleChoiceIcon" width="20" height="20"/>
+        <image name="F-ShufflePlayIcon" width="20" height="20"/>
+    </resources>
 </document>
