--- a/mia/Base.lproj/Favorite.storyboard
+++ b/mia/Base.lproj/Favorite.storyboard
@@ -69,7 +69,7 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXFavoriteCell" id="NvG-CY-wKf" userLabel="HXPlayListCell" customClass="HXFavoriteCell">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXFavoriteCell" id="NvG-CY-wKf" userLabel="HXFavoriteCell" customClass="HXFavoriteCell">
                                 <rect key="frame" x="0.0" y="88" width="320" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NvG-CY-wKf" id="jpA-RK-a7N">
@@ -156,9 +156,181 @@
             </objects>
             <point key="canvasLocation" x="406" y="418"/>
         </scene>
+        <!--HXFavoriteEditContainerViewController-->
+        <scene sceneID="qYE-UO-xym">
+            <objects>
+                <tableViewController storyboardIdentifier="HXFavoriteEditContainerViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="B6j-FN-7n3" userLabel="HXFavoriteEditContainerViewController" customClass="HXFavoriteEditContainerViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="xHa-Oc-TQc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="488"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXFavoriteEditCell" id="czE-xW-WAb" userLabel="HXFavoriteEditCell" customClass="HXFavoriteEditCell">
+                                <rect key="frame" x="0.0" y="28" width="320" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="czE-xW-WAb" id="UVN-Ko-BdC">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌曲名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hFQ-9f-Ce0">
+                                            <rect key="frame" x="50" y="12" width="258" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gAa-gA-ocw">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="60"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="F-SelecteIcon" translatesAutoresizingMaskIntoConstraints="NO" id="qUX-6c-2G2">
+                                                    <rect key="frame" x="15" y="20" width="20" height="20"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="CyS-Wj-egO"/>
+                                                <constraint firstItem="qUX-6c-2G2" firstAttribute="centerY" secondItem="gAa-gA-ocw" secondAttribute="centerY" id="KP4-PV-KXP"/>
+                                                <constraint firstItem="qUX-6c-2G2" firstAttribute="centerX" secondItem="gAa-gA-ocw" secondAttribute="centerX" id="xU7-Vn-ViN"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="表演者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVm-N4-5ml">
+                                            <rect key="frame" x="50" y="34" width="258" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q3l-bw-EPh" userLabel="Bottom Line">
+                                            <rect key="frame" x="50" y="60" width="270" height="0.0"/>
+                                            <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="0.5" id="C8Z-dI-8jp"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="fVm-N4-5ml" firstAttribute="leading" secondItem="hFQ-9f-Ce0" secondAttribute="leading" id="4q0-mc-8gi"/>
+                                        <constraint firstAttribute="trailing" secondItem="hFQ-9f-Ce0" secondAttribute="trailing" constant="12" id="8Su-rB-9Z6"/>
+                                        <constraint firstAttribute="bottom" secondItem="Q3l-bw-EPh" secondAttribute="bottom" id="FjA-NM-Njp"/>
+                                        <constraint firstItem="hFQ-9f-Ce0" firstAttribute="leading" secondItem="gAa-gA-ocw" secondAttribute="trailing" id="Hym-5Y-M0f"/>
+                                        <constraint firstItem="fVm-N4-5ml" firstAttribute="trailing" secondItem="hFQ-9f-Ce0" secondAttribute="trailing" id="O9R-VP-k03"/>
+                                        <constraint firstAttribute="trailing" secondItem="Q3l-bw-EPh" secondAttribute="trailing" id="Rm1-OW-KLo"/>
+                                        <constraint firstAttribute="bottom" secondItem="gAa-gA-ocw" secondAttribute="bottom" id="XG5-QZ-osC"/>
+                                        <constraint firstItem="Q3l-bw-EPh" firstAttribute="leading" secondItem="fVm-N4-5ml" secondAttribute="leading" id="d2V-UX-M8O"/>
+                                        <constraint firstItem="fVm-N4-5ml" firstAttribute="top" secondItem="hFQ-9f-Ce0" secondAttribute="bottom" constant="4" id="ee1-dS-LcQ"/>
+                                        <constraint firstItem="hFQ-9f-Ce0" firstAttribute="top" secondItem="UVN-Ko-BdC" secondAttribute="top" constant="12" id="fc4-iZ-m78"/>
+                                        <constraint firstItem="gAa-gA-ocw" firstAttribute="leading" secondItem="UVN-Ko-BdC" secondAttribute="leading" id="mfd-09-U9N"/>
+                                        <constraint firstItem="gAa-gA-ocw" firstAttribute="top" secondItem="UVN-Ko-BdC" secondAttribute="top" id="wGX-1o-TgI"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="singerNameLabel" destination="fVm-N4-5ml" id="oxz-Uy-Dvs"/>
+                                    <outlet property="songNameLabel" destination="hFQ-9f-Ce0" id="JHa-cN-PDQ"/>
+                                    <outlet property="stateIcon" destination="qUX-6c-2G2" id="XPh-II-Lkc"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="B6j-FN-7n3" id="XbL-4w-wiL"/>
+                            <outlet property="delegate" destination="B6j-FN-7n3" id="6PY-5A-2LF"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6hD-NT-SSr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1716" y="418"/>
+        </scene>
+        <!--HXFavoriteEditViewController-->
+        <scene sceneID="92n-SS-JAC">
+            <objects>
+                <viewController storyboardIdentifier="HXFavoriteEditViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="k3z-Sl-Ec6" userLabel="HXFavoriteEditViewController" customClass="HXFavoriteEditViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Dk7-VM-UvD"/>
+                        <viewControllerLayoutGuide type="bottom" id="CEd-as-bAQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="g74-Xg-arT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcC-8j-Pjd">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="488"/>
+                                <connections>
+                                    <segue destination="B6j-FN-7n3" kind="embed" id="kew-aL-Q8k"/>
+                                </connections>
+                            </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8se-Lm-XR0">
+                                <rect key="frame" x="0.0" y="488" width="320" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2z-Ku-wFX">
+                                        <rect key="frame" x="140" y="20" width="40" height="40"/>
+                                        <state key="normal" image="F-DeleteIcon"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="d2z-Ku-wFX" firstAttribute="centerY" secondItem="8se-Lm-XR0" secondAttribute="centerY" id="6F6-hB-Hux"/>
+                                    <constraint firstAttribute="height" constant="80" id="LkG-fC-4aQ"/>
+                                    <constraint firstItem="d2z-Ku-wFX" firstAttribute="centerX" secondItem="8se-Lm-XR0" secondAttribute="centerX" id="RMs-fg-UwQ"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="kcC-8j-Pjd" secondAttribute="trailing" id="Bxr-Iz-hxz"/>
+                            <constraint firstItem="8se-Lm-XR0" firstAttribute="top" secondItem="kcC-8j-Pjd" secondAttribute="bottom" id="Ko5-mE-LvD"/>
+                            <constraint firstItem="kcC-8j-Pjd" firstAttribute="top" secondItem="g74-Xg-arT" secondAttribute="top" id="MDA-dz-3Va"/>
+                            <constraint firstItem="kcC-8j-Pjd" firstAttribute="leading" secondItem="g74-Xg-arT" secondAttribute="leading" id="WFy-f6-NKf"/>
+                            <constraint firstItem="8se-Lm-XR0" firstAttribute="leading" secondItem="g74-Xg-arT" secondAttribute="leading" id="XV9-F4-57i"/>
+                            <constraint firstAttribute="trailing" secondItem="8se-Lm-XR0" secondAttribute="trailing" id="eAx-3i-21m"/>
+                            <constraint firstItem="CEd-as-bAQ" firstAttribute="top" secondItem="8se-Lm-XR0" secondAttribute="bottom" id="oM1-eY-Ibn"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="我的收藏" id="GAn-nr-fqn">
+                        <barButtonItem key="leftBarButtonItem" id="phB-Db-85R">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="x7D-GX-cOe">
+                                <rect key="frame" x="16" y="7" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <inset key="titleEdgeInsets" minX="-42" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="全选">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" id="ons-3b-Vya">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="Bil-9k-60Z">
+                                <rect key="frame" x="233" y="7" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <inset key="titleEdgeInsets" minX="25" minY="0.0" maxX="-14" maxY="0.0"/>
+                                <state key="normal" title="完成">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A44-gw-yqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1309" y="418"/>
+        </scene>
+        <!--HXFavoriteEditNavigaitonController-->
+        <scene sceneID="A8o-Nx-Mus">
+            <objects>
+                <navigationController storyboardIdentifier="HXFavoriteEditNavigaitonController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="4Bt-g5-MX3" userLabel="HXFavoriteEditNavigaitonController" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GdF-8I-8Tp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="k3z-Sl-Ec6" kind="relationship" relationship="rootViewController" id="aWa-9i-b3P"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="but-KM-hYz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="892" y="418"/>
+        </scene>
     </scenes>
     <resources>
         <image name="C-MuisIcon-Black" width="25" height="25"/>
+        <image name="F-DeleteIcon" width="40" height="40"/>
         <image name="F-DownLoadIcon" width="20" height="20"/>
+        <image name="F-SelecteIcon" width="20" height="20"/>
     </resources>
 </document>
