--- a/mia/Views/Favorite/Header/HXFavoriteHeader.xib
+++ b/mia/Views/Favorite/Header/HXFavoriteHeader.xib
@@ -6,7 +6,11 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXFavoriteHeader"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXFavoriteHeader">
+            <connections>
+                <outlet property="countLabel" destination="4Or-qm-gpt" id="zpI-fa-AoZ"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
